[gd_scene load_steps=2 format=2]

[ext_resource path="res://Dialogues/DIalogueManager.gd" type="Script" id=1]

[node name="DialogueUI" type="Panel"]
anchor_top = 1.0
anchor_right = 0.55
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -212.0
margin_right = 211.0
margin_bottom = -16.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueText" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 49.0
margin_right = 619.0
margin_bottom = 183.0
text = "Hello World! Today's Lucky Number is 42!"
scroll_active = false

[node name="DialogueName" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 13.0
margin_right = -109.0
margin_bottom = -151.0
text = "Name:"
scroll_active = false

[node name="Control" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 416.0
margin_top = -42.0
margin_right = -3.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueButton" type="Button" parent="Control"]
margin_left = 16.0
margin_top = 98.0
margin_right = 90.0
margin_bottom = 118.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueButton2" type="Button" parent="Control"]
margin_left = 15.0
margin_top = 66.0
margin_right = 89.0
margin_bottom = 86.0
text = "Continue"

[node name="DialogueButton3" type="Button" parent="Control"]
margin_left = 15.0
margin_top = 35.0
margin_right = 89.0
margin_bottom = 55.0
text = "Continue"

[node name="DialogueButton4" type="Button" parent="Control"]
margin_left = 16.0
margin_right = 90.0
margin_bottom = 20.0
text = "Continue"
